objects/cpqlabs__Log__c.object
<CustomObject>
    <description>Log Object to catch successes and errors</description>
    <fields>
        <fullName>cpqlabs__ClassName__c</fullName>
        <description>Class Name attribute to this action</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpqlabs__JSON__c</fullName>
        <description>JSON String (for debugging API calls)</description>
        <label>JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpqlabs__Level__c</fullName>
        <description>Logging Level for this action</description>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERROR</fullName>
                    <default>true</default>
                    <label>ERROR</label>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpqlabs__Message__c</fullName>
        <description>Message for this action</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpqlabs__ObjectIDs__c</fullName>
        <description>Comma delimited list of Object ID&apos;s affected by this action</description>
        <label>Object IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpqlabs__ObjectName__c</fullName>
        <description>Object Name being saved in this action (for DML)</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpqlabs__StackTrace__c</fullName>
        <description>Stack Trace (for exceptions)</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpqlabs__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that initiated this action</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>cpqlabs__All</fullName>
        <columns>NAME</columns>
        <columns>cpqlabs__ClassName__c</columns>
        <columns>cpqlabs__Level__c</columns>
        <columns>cpqlabs__Message__c</columns>
        <columns>cpqlabs__User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>